# serializer version: 1
# name: test_feature_spec_version_deterministic
  'e8e37a4ec0ff8a4e6c9b3c995bf9f2a11327b283eb67c7c62cfe893fa6f0ad9b'
# ---
# name: test_feature_spec_version_includes_all_properties
  'c64c0fc9b5d3fef9c3742fd99bf9c69198b90ac09f12f1c930ede43b887b6c91'
# ---
# name: test_feature_spec_version_recorded_in_metadata_store
  dict({
    'feature_key': 'recorded/feature',
    'metaxy_feature_spec_version': '88d511493754f1378b86e75311d9a4efd06ee800ea167449596d2c89bcd2062c',
    'metaxy_feature_version': '0c7b2d83252fbf2f689bec7d37c4f7ffb103755d11eafabc1e000a372f415d83',
    'metaxy_snapshot_version': '14d4294da40f4ab27ca85eb739fffd70e92c92522dbcba995cfa2aa343988bf3',
  })
# ---
# name: test_feature_spec_version_stored_in_snapshot
  dict({
    'feature_class_path': 'test_spec_version.SnapshotFeature',
    'feature_schema': dict({
      'properties': dict({
        'metaxy_created_at': dict({
          'anyOf': list([
            dict({
              'format': 'date-time',
              'type': 'string',
            }),
            dict({
              'type': 'null',
            }),
          ]),
          'default': None,
          'description': 'Timestamp when the metadata row was created (UTC)',
          'title': 'Metaxy Created At',
        }),
        'metaxy_data_version': dict({
          'anyOf': list([
            dict({
              'type': 'string',
            }),
            dict({
              'type': 'null',
            }),
          ]),
          'default': None,
          'description': 'Hash of metaxy_data_version_by_field',
          'title': 'Metaxy Data Version',
        }),
        'metaxy_data_version_by_field': dict({
          'anyOf': list([
            dict({
              'additionalProperties': dict({
                'type': 'string',
              }),
              'type': 'object',
            }),
            dict({
              'type': 'null',
            }),
          ]),
          'default': None,
          'description': 'Field-level data version hashes (maps field names to version hashes)',
          'title': 'Metaxy Data Version By Field',
        }),
        'metaxy_feature_version': dict({
          'anyOf': list([
            dict({
              'type': 'string',
            }),
            dict({
              'type': 'null',
            }),
          ]),
          'default': None,
          'description': 'Hash of the feature definition (dependencies + fields + code_versions)',
          'title': 'Metaxy Feature Version',
        }),
        'metaxy_materialization_id': dict({
          'anyOf': list([
            dict({
              'type': 'string',
            }),
            dict({
              'type': 'null',
            }),
          ]),
          'default': None,
          'description': 'External orchestration run ID (e.g., Dagster Run ID)',
          'title': 'Metaxy Materialization Id',
        }),
        'metaxy_provenance': dict({
          'anyOf': list([
            dict({
              'type': 'string',
            }),
            dict({
              'type': 'null',
            }),
          ]),
          'default': None,
          'description': 'Hash of metaxy_provenance_by_field',
          'title': 'Metaxy Provenance',
        }),
        'metaxy_provenance_by_field': dict({
          'additionalProperties': dict({
            'type': 'string',
          }),
          'description': 'Field-level provenance hashes (maps field names to hashes)',
          'title': 'Metaxy Provenance By Field',
          'type': 'object',
        }),
        'metaxy_snapshot_version': dict({
          'anyOf': list([
            dict({
              'type': 'string',
            }),
            dict({
              'type': 'null',
            }),
          ]),
          'default': None,
          'description': 'Hash of the entire feature graph snapshot',
          'title': 'Metaxy Snapshot Version',
        }),
      }),
      'title': 'SnapshotFeature',
      'type': 'object',
    }),
    'feature_spec': dict({
      'deps': list([
      ]),
      'fields': list([
        dict({
          'code_version': '1',
          'deps': list([
          ]),
          'key': 'data',
        }),
      ]),
      'id_columns': list([
        'sample_uid',
      ]),
      'key': 'snapshot/test',
      'lineage': dict({
        'relationship': dict({
          'type': '1:1',
        }),
      }),
      'metadata': dict({
      }),
    }),
    'metaxy_feature_spec_version': 'dbcea9d90a69bf9a2802bdc04ee2c57da828f735a0fd51cb86bcb50db9107995',
    'metaxy_feature_version': '7cfde77960e3cf10327e9cb97f311418b101fc5ee2c146922a997306e318edaf',
    'metaxy_full_definition_version': 'b40641ad4eec4649078694c70ad4abd44dc4bc599919d52bffc5f849cab86838',
    'project': 'test',
  })
# ---
# name: test_feature_spec_version_with_column_selection_and_rename
  '52b0b3ebe47b29d84216118c7293e917910a16b4e9846a049a3f23ee94150b6c'
# ---
# name: test_feature_spec_version_with_multiple_complex_deps
  '8fb49f51965f9f806331cc8823beb7a1b9d79375de496abf22053438ae26d81e'
# ---
